
# Resister the component
idf_component_register(
    NAME
      RaftI2C
    SRCS 
      "components/RaftI2C/BusI2C/BusAccessor.cpp"
      "components/RaftI2C/BusI2C/BusI2C.cpp"
      "components/RaftI2C/BusI2C/BusAddrStatus.cpp"
      "components/RaftI2C/BusI2C/BusI2CESPIDF.cpp"
      "components/RaftI2C/BusI2C/BusI2CScheduler.cpp"
      "components/RaftI2C/BusI2C/BusMultiplexers.cpp"
      "components/RaftI2C/BusI2C/BusPowerController.cpp"
      "components/RaftI2C/BusI2C/BusScanner.cpp"
      "components/RaftI2C/BusI2C/BusStatusMgr.cpp"
      "components/RaftI2C/BusI2C/BusStuckHandler.cpp"
      "components/RaftI2C/BusI2C/DeviceIdentMgr.cpp"
      "components/RaftI2C/BusI2C/DevicePollingMgr.cpp"
      "components/RaftI2C/BusI2C/DeviceStatus.cpp"
      "components/RaftI2C/I2CCentral/RaftI2CCentral.cpp"
      "components/RaftI2C/I2CCentral/ESPIDF5I2C/ESPIDF5I2CCentral.cpp"
    INCLUDE_DIRS
      "components/RaftI2C/I2CCentral"
      "components/RaftI2C/I2CCentral/ESPIDF5I2C"
      "components/RaftI2C/BusI2C"
      "${CMAKE_BINARY_DIR}"
    REQUIRES
      RaftCore
      driver
    )
