idf_component_register(
    NAME
      RaftI2C
    SRCS
      "BusI2C/BusAccessor.cpp"
      "BusI2C/BusI2C.cpp"
      "BusI2C/BusI2CScheduler.cpp"
      "BusI2C/BusMultiplexers.cpp"
      "BusI2C/BusScanner.cpp"
      "BusI2C/BusStatusMgr.cpp"
      "BusI2C/BusStuckHandler.cpp"
      "BusI2C/DeviceIdentMgr.cpp"
      "BusI2C/DevicePollingMgr.cpp"
      "BusI2C/SlotController.cpp"
      "BusIOExpanders/BusIOExpanders.cpp"
      "BusIOExpanders/BusIOExpander.cpp"
      "BusPowerController/BusPowerController.cpp"
      "I2CCentral/RaftI2CCentral.cpp"
      "I2CCentral_ESPIDF/RaftI2CCentral_ESPIDF.cpp"
    INCLUDE_DIRS
      "BusI2C"
      "BusIOExpanders"
      "BusPowerController"
      "I2CCentral"
      "I2CCentral_ESPIDF"
    REQUIRES
      RaftCore
      driver
      esp_driver_gpio
      esp_driver_i2c
    )