idf_component_register(
        SRCS
            "test_main.cpp"
            "test_bus_i2c.cpp"
            "test_data_aggregator.cpp"
        INCLUDE_DIRS 
            "."
        REQUIRES
            esp_system
            unity
            nvs_flash
            RaftI2C
        WHOLE_ARCHIVE
        )
